remove sentence referencing dataset

--- a/qual/index.html
+++ b/qual/index.html
@@ -268,13 +268,13 @@
                     </template>
                 </example-sent>
                 <example-sent 
-                    explanation="Although the sentence retains its core meaning without the span “on 18 June 2002”, the specific reference of when Donaldson enlisted in the army is lost.">
-                    <template #complex-sent>Military career Donaldson enlisted in the Australian Army on <ed>18 June 2002</ed>.</template>
-                    <template #simple-sent>Military career Donaldson enlisted in the Australian Army.</template>
+                    explanation="Although the sentence retains its core meaning without the span on 29 January 2018, although the specific reference of when 'Meltdown' and 'Spectre' were 'made public' is lost.">
+                    <template #complex-sent>Two security flaws, dubbed Meltdown and Spectre by researchers, were made public <ed>on 29 January 2018</ed>.</template>
+                    <template #simple-sent>Two security flaws, dubbed Meltdown and Spectre by researchers, were made public.</template>
                     <template #edit>
                         <edit
                             type="deletion"
-                            span="18 June 2002"
+                            span="on 29 January 2018"
                             answer="2"
                         />
                     </template>
