check more human simplifications

--- a/qual/index.html
+++ b/qual/index.html
@@ -106,8 +106,8 @@
 
                 <example-sent 
                     explanation="Substitutions may be on another side of the sentence. “is known as data fitting” is referring to “Data fitting is” even though it has been moved.">
-                    <template #complex-sent><es>The task find a model</es> <sub><i class="fa-solid fa-1 fa-2xs txt-substitution"></i></sub> that best fits some <es>observed data and prior information</es> <sub><i class="fa-solid fa-2 fa-2xs txt-substitution"></i></sub> <es>is known as data fitting.</es> <sub><i class="fa-solid fa-3 fa-2xs txt-substitution"></i></sub></template>
-                    <template #simple-sent><es>Data fitting</es> <sub><i class="fa-solid fa-3 fa-2xs txt-substitution"></i></sub> <es>is the task to find a model</es> <sub><i class="fa-solid fa-1 fa-2xs txt-substitution"></i></sub> that best fits some <es>information.</es> <sub><i class="fa-solid fa-2 fa-2xs txt-substitution"></i></sub></template>
+                    <template #complex-sent>The task find a model that best fits some <es>observed data and prior information</es> <sub><i class="fa-solid fa-1 fa-2xs txt-substitution"></i></sub> <es>is known as data fitting.</es> <sub><i class="fa-solid fa-2 fa-2xs txt-substitution"></i></sub></template>
+                    <template #simple-sent><es>Data fitting is</es> <sub><i class="fa-solid fa-2 fa-2xs txt-substitution"></i></sub> the task <ei>to</ei> find a model that best fits some <es>information.</es> <sub><i class="fa-solid fa-1 fa-2xs txt-substitution"></i></sub></template>
                 </example-sent>
 
                 <example-sent 
