add 4 examples for structure edit

--- a/qual/index.html
+++ b/qual/index.html
@@ -879,15 +879,42 @@
                 </example-sent>
 
                 <example-sent>
-                    <template #complex-sent>Internationally renowned for its breeding and success in competitions, Skeiðvellir is home to Icelandic Horseworld, a tourist attraction on the premises.</template>
-                    <template #simple-sent>"Extreme smoke day" is defined as air quality deemed unhealthy for all age groups. <esp>||</esp> It happens more and more often in the past decade.</template>
+                    <template #complex-sent>The polymer is most often epoxy, but other polymers, such as polyester, vinyl ester or nylon, are also sometimes used.</template>
+                    <template #simple-sent>Often the polymer used is epoxy, other polymers that can be used are polyester, vinyl ester or nylon.</template>
                     <template #edit>
                         <edit
                             type="split"
-                            split_edit="insertion"
-                            simplify=false
-                            span="and"
-                            explanation="delete `and` is associated with this split edit."
+                            ></edit>
+                    </template>
+                </example-sent>
+
+                <example-sent>
+                    <template #complex-sent>The task find a model that best fits some observed data and prior information  is known as data fitting.</template>
+                    <template #simple-sent>Data fitting is the task to find a model that best fits some information.</template>
+                    <template #edit>
+                        <edit
+                            type="split"
+                            ></edit>
+                    </template>
+                </example-sent>
+
+                <example-sent>
+                    <template #complex-sent>The award-winning chef prepares each meal with loving care.</template>
+                    <template #simple-sent>Each meal is cooked with loving care by the award-winning chef.</template>
+                    <template #edit>
+                        <edit
+                            type="split"
+                            ></edit>
+                    </template>
+                </example-sent>
+
+
+                <example-sent>
+                    <template #complex-sent>Fearing that Drek will destroy the galaxy, Clank asks Ratchet to help him find the famous superhero Captain Qwark, in an effort to stop Drek.</template>
+                    <template #simple-sent>Clank was fearing that Drek will destroy the galaxy, so he asked Ratchet to help him find the famous superhero Captain Qwark, in an effort to stop Drek.</template>
+                    <template #edit>
+                        <edit
+                            type="split"
                             ></edit>
                     </template>
                 </example-sent>
