--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <!-- disable  -->
                         <div class="buttons tc">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('deletion', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_deletion, 'grow': !save_validated_deletion}" :disabled="save_validated_deletion">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('deletion', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_deletion, 'grow': !save_validated_deletion}" :disabled="save_validated_deletion">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -675,7 +675,7 @@
                         <!-- disable  -->
                         <div class="buttons tc pt2">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('substitution', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_substitution, 'grow': !save_validated_substitution}" :disabled="save_validated_substitution">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('substitution', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_substitution, 'grow': !save_validated_substitution}" :disabled="save_validated_substitution">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -914,7 +914,7 @@
                         <!-- disable  -->
                         <div class="buttons tc">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('insertion', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_insertion, 'grow': !save_validated_insertion}" :disabled="save_validated_insertion">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('insertion', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_insertion, 'grow': !save_validated_insertion}" :disabled="save_validated_insertion">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -1029,7 +1029,7 @@
                         <!-- disable  -->
                         <div class="buttons tc">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('reorder', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_reorder, 'grow': !save_validated_reorder}" :disabled="save_validated_reorder">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('reorder', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_reorder, 'grow': !save_validated_reorder}" :disabled="save_validated_reorder">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -1145,7 +1145,7 @@
                         <!-- disable  -->
                         <div class="buttons tc">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('split', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_split, 'grow': !save_validated_split}" :disabled="save_validated_split">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('split', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_split, 'grow': !save_validated_split}" :disabled="save_validated_split">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
@@ -1261,7 +1261,7 @@
                         <!-- disable  -->
                         <div class="buttons tc">
                             <button @click="cancel_click" class="cancel-button b quality_button bw0 ba mr2 br-pill-ns grow" type="button">Cancel <i class="fa-solid fa-close"></i></button>
-                            <button @click="save_anntotation_click('structure', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_structure, 'grow': !save_validated_structure}" :disabled="save_validated_structure">Save <i class="fa-solid fa-check"></i></button>
+                            <button @click="save_annotation_click('structure', $event)" class="confirm-button b quality_button bw0 ba ml2 br-pill-ns" :class="{'o-40': save_validated_structure, 'grow': !save_validated_structure}" :disabled="save_validated_structure">Save <i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
                 </div>
