add annotations for 11 sentences

--- a/index.html
+++ b/index.html
@@ -424,14 +424,14 @@
                                             <input @click="substitution_show_grammar" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
                                                 id="substitution-less-severity-3" value="bad" v-model="substitution_less_severity_box">
                                             <label class="for-checkbox-tools-severity question-substitution" for="substitution-less-severity-3">
-                                                3 - somewhat, about Half of the main idea
+                                                3 - somewhat
                                             </label>
                                         </div>
                                         <div class="column-severity w-25">
                                             <input @click="substitution_show_grammar" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
                                                 id="substitution-less-severity-4" value="very bad" v-model="substitution_less_severity_box">
                                             <label class="for-checkbox-tools-severity question-substitution" for="substitution-less-severity-4">
-                                                4 - very, about the main idea
+                                                4 - a lot
                                             </label>
                                         </div>
                                     </div>
